5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1594_1803.log
== TEST (2019-04-04 16:25:37) 
-- CODE:
a = int(input('a:'))

a1 = (a//1000)%10
a2 = (a//100)%10
a3 = (a//10)%10,
a4 = %10

print(a)
-- ERROR:
File "XXXX", line 6
    a4 = %10
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:25:56) 
-- CODE:
a = int(input('a:'))

a1 = (a//1000)%10
a2 = (a//100)%10
a3 = (a//10)%10,
a4 = a%10

print(a)
-- OUTPUT:
2000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:25:59) 
-- CODE:
a = int(input('a:'))

a1 = (a//1000)%10
a2 = (a//100)%10
a3 = (a//10)%10,
a4 = a%10

print(a)
-- EXECUTION TIME:
0.187397
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
2000
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
3550
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:26:01) 
-- CODE:
a = int(input('a:'))

a1 = (a//1000)%10
a2 = (a//100)%10
a3 = (a//10)%10,
a4 = a%10

print(a)
-- OUTPUT:
2000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:33:59) 
-- CODE:
a = int(input('a:1234'))

a1 = a//1000
a2 = (a//100)%10
a3 = (a//10)%10
a4 = a%10

w = a1*5
x = a2*4
y = a3*3
z = a4*2

soma = (w+x+y+z)%11
print(soma)


-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:34:09) 
-- CODE:
a = int(input('a:'))

a1 = a//1000
a2 = (a//100)%10
a3 = (a//10)%10
a4 = a%10

w = a1*5
x = a2*4
y = a3*3
z = a4*2

soma = (w+x+y+z)%11
print(soma)


-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 17:34:16) 
-- CODE:
a = int(input('a:'))

a1 = a//1000
a2 = (a//100)%10
a3 = (a//10)%10
a4 = a%10

w = a1*5
x = a2*4
y = a3*3
z = a4*2

soma = (w+x+y+z)%11
print(soma)


-- EXECUTION TIME:
0.222258
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:41:16) 
-- CODE:
a = int(input('a:'))

a1 = a//1000
a2 = (a//100)%10
a3 = (a//10)%10
a4 = a%10

w = a1*5
x = a2*4
y = a3*3
z = a4*2

soma = (w+x+y+z)%11
print(soma)


-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
